backend/demo/src/main/java/com/example/demo/error/ErrorHandler.java
package com.example.demo.error;

import java.util.Date;

import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;

@ControllerAdvice
public class ErrorHandler extends ResponseEntityExceptionHandler{
    
    @ExceptionHandler(Exception.class)
    public ResponseEntity error(Exception ex){
        return new ResponseEntity(new ErroPadrao("Exception",ex.getMessage(),404,new Date()), HttpStatus.NOT_FOUND);
    }

    
}
